@@ -1,46 +1,5 @@
 package uk.gov.moj.cpp.results.it;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.commons.io.IOUtils;
-import org.hamcrest.Matcher;
-import org.hamcrest.Matchers;
-import org.hamcrest.core.IsNull;
-import org.json.JSONObject;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import uk.gov.justice.core.courts.*;
-import uk.gov.justice.core.courts.external.ApiAddress;
-import uk.gov.justice.core.courts.external.ApiCourtCentre;
-import uk.gov.justice.services.common.converter.JsonObjectToObjectConverter;
-import uk.gov.justice.services.common.converter.jackson.ObjectMapperProducer;
-import uk.gov.moj.cpp.domains.results.shareresults.PublicHearingResulted;
-import uk.gov.moj.cpp.results.domain.event.AmendmentType;
-import uk.gov.moj.cpp.results.domain.event.JudicialResultDetails;
-import uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions;
-import uk.gov.moj.cpp.results.it.utils.Queries;
-import uk.gov.moj.cpp.results.query.view.response.HearingResultSummariesView;
-import uk.gov.moj.cpp.results.query.view.response.HearingResultSummaryView;
-import uk.gov.moj.cpp.results.test.TestTemplates;
-import uk.gov.moj.cpp.results.test.matchers.BeanMatcher;
-
-import javax.jms.JMSException;
-import javax.json.JsonObject;
-import javax.json.JsonReader;
-import java.io.InputStream;
-import java.io.StringReader;
-import java.time.LocalDate;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
 import static com.jayway.jsonpath.matchers.JsonPathMatchers.withJsonPath;
 import static java.nio.charset.Charset.defaultCharset;
 import static java.time.LocalDate.now;
@@ -51,34 +10,117 @@ import static java.util.UUID.fromString;
 import static java.util.UUID.randomUUID;
 import static javax.json.Json.createObjectBuilder;
 import static javax.json.Json.createReader;
+import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
-import static org.hamcrest.CoreMatchers.*;
+import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.hasItem;
+import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.fail;
+import static uk.gov.justice.core.courts.CourtApplication.courtApplication;
 import static uk.gov.justice.core.courts.CourtApplicationCase.courtApplicationCase;
+import static uk.gov.justice.core.courts.CourtCentre.courtCentre;
 import static uk.gov.justice.core.courts.JurisdictionType.MAGISTRATES;
+import static uk.gov.justice.core.courts.ProsecutionCase.prosecutionCase;
+import static uk.gov.justice.core.courts.ProsecutionCaseIdentifier.prosecutionCaseIdentifier;
+import static uk.gov.justice.core.courts.external.ApiCourtCentre.apiCourtCentre;
 import static uk.gov.justice.services.test.utils.core.random.RandomGenerator.FUTURE_LOCAL_DATE;
 import static uk.gov.justice.services.test.utils.core.random.RandomGenerator.STRING;
-import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.*;
-import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPrivateEventsWithPoliceNotificationRequestedV2;
+import static uk.gov.moj.cpp.domains.results.shareresults.PublicHearingResulted.publicHearingResulted;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.closeMessageConsumers;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.createMessageConsumers;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.getHearingDetails;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.getHearingDetailsForHearingId;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.getHearingDetailsForHearingIdAndHearingDate;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.getInternalHearingDetailsForHearingId;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.getSummariesByDate;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.hearingResultsHaveBeenSharedV2;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.thenReturnsBadRequestForResultsSummaryWithoutFromDate;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPublicEventForPoliceResultsGenerated;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPublicEventPoliceResultGeneratedAndReturnPayload;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPublicEventPoliceResultGeneratedMessage;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPublicEventPoliceResultGeneratedNotRaised;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.verifyPublicEventPoliceResultsGenerated;
+import static uk.gov.moj.cpp.results.it.steps.ResultsStepDefinitions.whenPrisonAdminTriesToViewResultsForThePerson;
 import static uk.gov.moj.cpp.results.it.steps.data.factory.HearingResultDataFactory.getUserId;
-import static uk.gov.moj.cpp.results.it.stub.NotificationServiceStub.verifyEmailNotificationIsRaised;
+import static uk.gov.moj.cpp.results.it.stub.NotificationNotifyServiceStub.verifyEmailNotificationIsRaised;
 import static uk.gov.moj.cpp.results.it.stub.ProgressionStub.stubGetProgressionCaseExistsByUrn;
 import static uk.gov.moj.cpp.results.it.stub.ProgressionStub.stubGetProgressionProsecutionCases;
 import static uk.gov.moj.cpp.results.it.utils.EventGridStub.stubEventGridEndpoint;
 import static uk.gov.moj.cpp.results.it.utils.HttpClientUtil.sendGeneratePoliceResultsForADefendantCommand;
-import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.*;
+import static uk.gov.moj.cpp.results.it.utils.Queries.pollForMatch;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.PROSECUTOR_WITH_SPI_OUT_FALSE;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubBailStatuses;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubCountryNationalities;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubGetOrgainsationUnit;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubJudicialResults;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubModeOfTrialReasons;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubPoliceFlag;
+import static uk.gov.moj.cpp.results.it.utils.ReferenceDataServiceStub.stubSpiOutFlag;
 import static uk.gov.moj.cpp.results.it.utils.WireMockStubUtils.setupUserAsPrisonAdminGroup;
 import static uk.gov.moj.cpp.results.it.utils.WireMockStubUtils.stubNotificationNotifyEndPoint;
-import static uk.gov.moj.cpp.results.test.TestTemplates.*;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareHearingTemplateWithApplication;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareHearingTemplateWithCustomApplication;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareResultsV2Template;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareResultsV2TemplateForIndicatedPlea;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareResultsV2TemplateWithHearingDay;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareResultsV2WithMagistratesAlongWithOffenceDateCodeTemplate;
+import static uk.gov.moj.cpp.results.test.TestTemplates.basicShareResultsV2WithVerdictTemplate;
+import static uk.gov.moj.cpp.results.test.TestTemplates.buildJudicialResultList;
 import static uk.gov.moj.cpp.results.test.matchers.BeanMatcher.isBean;
+
+import uk.gov.justice.core.courts.Address;
+import uk.gov.justice.core.courts.ApplicationStatus;
+import uk.gov.justice.core.courts.CourtApplicationCase;
+import uk.gov.justice.core.courts.CourtCentre;
+import uk.gov.justice.core.courts.Hearing;
+import uk.gov.justice.core.courts.HearingResultsAdded;
+import uk.gov.justice.core.courts.IndicatedPleaValue;
+import uk.gov.justice.core.courts.JurisdictionType;
+import uk.gov.justice.core.courts.ProsecutionCase;
+import uk.gov.justice.core.courts.Verdict;
+import uk.gov.justice.core.courts.VerdictType;
+import uk.gov.justice.core.courts.external.ApiAddress;
+import uk.gov.justice.core.courts.external.ApiCourtCentre;
+import uk.gov.justice.services.common.converter.JsonObjectToObjectConverter;
+import uk.gov.justice.services.common.converter.jackson.ObjectMapperProducer;
+import uk.gov.moj.cpp.domains.results.shareresults.PublicHearingResulted;
+import uk.gov.moj.cpp.results.query.view.response.HearingResultSummariesView;
+import uk.gov.moj.cpp.results.query.view.response.HearingResultSummaryView;
+import uk.gov.moj.cpp.results.test.TestTemplates;
+import uk.gov.moj.cpp.results.test.matchers.BeanMatcher;
+
+import java.io.InputStream;
+import java.io.StringReader;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+import javax.jms.JMSException;
+import javax.json.JsonObject;
+import javax.json.JsonReader;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.io.IOUtils;
+import org.hamcrest.Matcher;
+import org.hamcrest.Matchers;
+import org.hamcrest.core.IsNull;
+import org.json.JSONObject;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 @SuppressWarnings({"unchecked", "serial", "squid:S2925", "squid:S1607"})
 public class HearingResultedIT {
 
-    private static final String TEMPLATE_PAYLOAD_MAG = "json/public.events.hearing.hearing-resulted.json";
-    private static final String TEMPLATE_PAYLOAD_RESHARE_MAG = "json/public.events.hearing.hearing-results-reshared.json";
     private static final String TEMPLATE_PAYLOAD_CROWN = "json/public.events.hearing.hearing-resulted-crown.json";
     private static final String TEMPLATE_PAYLOAD_RESHARE_CROWN = "json/public.events.hearing.hearing-results-reshared-crown.json";
     private static final String TEMPLATE_PAYLOAD_GROUP_CASES = "json/public.events.hearing.hearing-resulted-group-cases.json";
@@ -87,8 +129,7 @@ public class HearingResultedIT {
     private static final String DEFENDANT_ID = "defendantId";
     private static final String CASE_ID_VALUE = "cccc1111-1e20-4c21-916a-81a6c90239e5";
     private static final String DEFENDANT_ID_VALUE = "dddd1111-1e20-4c21-916a-81a6c90239e5";
-    private static final String EMAIL = "email@email.com";
-    private static final String MAG_EMAIL = "mag@email.com";
+
     private static final String FINDING_VALUE_DEFAULT = "G";
     private static final String FINDING_VALUE_NOT_GUILTY = "N";
     private static final String OU_CODE = "0300000";
@@ -101,6 +142,8 @@ public class HearingResultedIT {
     private final ObjectMapper objectMapper = new ObjectMapperProducer().objectMapper();
     private final JsonObjectToObjectConverter jsonToObjectConverter = new JsonObjectToObjectConverter(objectMapper);
 
+    private final String policeEmailAddress = randomAlphabetic(10) + "@email.com";
+
     @BeforeAll
     public static void setUpClass() {
         setupUserAsPrisonAdminGroup(getUserId());
@@ -112,6 +155,7 @@ public class HearingResultedIT {
         stubModeOfTrialReasons();
         stubPoliceFlag(OU_CODE, PROSECUTION_AUTHORITY);
         stubNotificationNotifyEndPoint();
+        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
 
     }
 
@@ -127,25 +171,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void testCCForSpiOut() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
-        startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
-
-        Optional<String> response = verifyInPublicTopic();
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceSequenceNumber")));
-    }
-
-    @Test
-    public void testCCForSpiOutWithIndicatedPlea() throws JMSException {
+    public void testCCForSpiOutWithIndicatedPleaAndOtherBasicParameters() {
         final PublicHearingResulted resultsMessage = basicShareResultsV2TemplateForIndicatedPlea(MAGISTRATES);
         setOuCodeAndProsecutorAuthority(resultsMessage);
 
@@ -156,38 +182,21 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceSequenceNumber")));
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getIndicatedPlea(), is(notNullValue()));
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getIndicatedPlea().getIndicatedPleaValue(), is(IndicatedPleaValue.INDICATED_GUILTY));
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
+        final JSONObject firstOffence = new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0);
+        assertThat(firstOffence.get("offenceSequenceNumber"), is(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex()));
+        assertThat(firstOffence.getJSONObject("indicatedPlea").getString("indicatedPleaValue"), is(IndicatedPleaValue.INDICATED_GUILTY.name()));
+        assertThat(firstOffence.get("offenceDateCode"), is(1));
+        assertThat(firstOffence.getString("finding"), is(FINDING_VALUE_DEFAULT));
     }
 
     @Test
-    public void testCCForSpiOutForHearingDay() throws JMSException {
-        final LocalDate hearingDay = LocalDate.now();
-        final PublicHearingResulted resultsMessage = basicShareResultsV2TemplateWithHearingDay(MAGISTRATES, hearingDay);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
-        startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGeneratedForDay(hearingDay);
-
-        Optional<String> response = verifyInPublicTopic();
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceSequenceNumber")));
-    }
-
-    @Test
-    public void testCCForSpiOutWithOffenceDateCode() throws JMSException {
+    public void testCCForSpiOutWithOffenceDateCode() {
         final Integer offenceDateCode = 4;
         final PublicHearingResulted resultsMessage = basicShareResultsV2WithMagistratesAlongWithOffenceDateCodeTemplate(offenceDateCode);
         setOuCodeAndProsecutorAuthority(resultsMessage);
+
         hearingResultsHaveBeenSharedV2(resultsMessage);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
 
@@ -195,41 +204,10 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
         assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceSequenceNumber")));
         assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOffenceDateCode(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceDateCode")));
-    }
-
-    @Test
-    public void testCCForSpiOutDefaultOffenceDateCode() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
-        startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
-
-        Optional<String> response = verifyInPublicTopic();
-        assertThat(resultsMessage.getHearing().getProsecutionCases().get(0).getDefendants().get(0).getOffences().get(0).getOrderIndex(), is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceSequenceNumber")));
-        assertThat(1, is(new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(0).get("offenceDateCode")));
-    }
-
-
-    @Test
-    public void whenVerdictNotPresentAndConvictedDatePresentThenPoliceResultGeneratedHasFindingWithDefaultValue() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-        verifyPrivateEventsWithPoliceResultGenerated();
-
-        verifyInPublicPoliceResultGeneratedMessage(FINDING_VALUE_DEFAULT);
     }
 
     @Test
@@ -239,30 +217,13 @@ public class HearingResultedIT {
 
         hearingResultsHaveBeenSharedV2(resultsMessage);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-        verifyPrivateEventsWithPoliceResultGenerated();
-
-        verifyInPublicPoliceResultGeneratedMessage(FINDING_VALUE_NOT_GUILTY);
-    }
-
-
-    @Test
-    public void testCCForEmailNotificationFailWhenEmailIsEmpty() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(JurisdictionType.CROWN);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
-        startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceNotificationFailed();
+        verifyPublicEventPoliceResultGeneratedMessage(FINDING_VALUE_NOT_GUILTY);
     }
 
     @Test
-    public void testCCForEmailNotificationSuccess() throws JMSException {
+    public void testCCForEmailNotificationSuccess() {
         final PublicHearingResulted resultsMessage = basicShareResultsV2Template(JurisdictionType.CROWN);
-        stubSpiOutFlag(true, true, EMAIL);
+        stubSpiOutFlag(true, true, policeEmailAddress);
         setOuCodeAndProsecutorAuthority(resultsMessage);
 
         hearingResultsHaveBeenSharedV2(resultsMessage);
@@ -272,7 +233,7 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceNotificationRequestedV2(EMAIL);
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress));
     }
 
     @Test
@@ -288,78 +249,37 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated(false);
-        verifyNotInPublicTopic();
+        verifyPublicEventPoliceResultGeneratedNotRaised();
+
+        final JsonObject payload = createObjectBuilder()
+                .add(SESSION_ID, resultsMessage.getHearing().getId().toString())
+                .add(CASE_ID, CASE_ID_VALUE)
+                .add(DEFENDANT_ID, DEFENDANT_ID_VALUE)
+                .build();
+
+        sendGeneratePoliceResultsForADefendantCommand(payload);
+        verifyPublicEventForPoliceResultsGenerated(true);
     }
 
     @Test
-    public void testCCForRejectedEvent() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2TemplateWithoutResult(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
-        startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsForRejected();
-    }
-
-    @Test
-    public void shouldGeneratePoliceResultForFirstShareAndSendEmailWhenAmendedForMagistrates() throws JMSException {
+    public void shouldSendEmailForFirstShareAndAmendmentsForCrownCourt() {
         final UUID hearingId = randomUUID();
-        System.out.println(hearingId);
-        final JsonObject payload = getPayload(TEMPLATE_PAYLOAD_MAG, hearingId);
-        stubSpiOutFlag(true, true, MAG_EMAIL);
-        hearingResultsHaveBeenSharedV2(payload);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        final LocalDate startDate = of(2019, 5, 25);
-
-        getSummariesByDate(startDate);
-
-        verifyPrivateEventsWithPoliceResultGenerated();
-        verifyInPublicTopic();
-
-        final JsonObject amendedPayload = getPayload(TEMPLATE_PAYLOAD_RESHARE_MAG, hearingId);
-        hearingResultsHaveBeenSharedV2(amendedPayload);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
-        getSummariesByDate(startDate);
-        verifyPrivateEventsForAmendment(MAG_EMAIL, JudicialResultDetails.judicialResultDetails()
-                .withId(fromString("ea5eb48e-387c-4921-8f9d-d779d731fc38"))
-                .withJudicialResultTypeId(fromString("1726363f-e216-48a3-b0aa-567fd269f0cb"))
-                .withResultTitle("Imprisonment")
-                .withAmendmentType(AmendmentType.ADDED)
-                .build());
-    }
-
-    @Test
-    public void shouldSendEmailForFirstShareAndAmendmentsForCrownCourt() throws JMSException {
-        final UUID hearingId = randomUUID();
-        System.out.println(hearingId);
         final JsonObject payload = getPayload(TEMPLATE_PAYLOAD_CROWN, hearingId);
-        stubSpiOutFlag(true, true, EMAIL);
+        stubSpiOutFlag(true, true, policeEmailAddress);
         hearingResultsHaveBeenSharedV2(payload);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
 
         final LocalDate startDate = of(2019, 5, 25);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceNotificationRequestedV2(EMAIL);
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress), List.of("Imprisonment"));
 
         final JsonObject amendedPayload = getPayload(TEMPLATE_PAYLOAD_RESHARE_CROWN, hearingId);
         hearingResultsHaveBeenSharedV2(amendedPayload);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsForAmendment(EMAIL, JudicialResultDetails.judicialResultDetails()
-                .withId(fromString("ea5eb48e-387c-4921-8f9d-d779d731fc38"))
-                .withJudicialResultTypeId(fromString("1726363f-e216-48a3-b0aa-567fd269f0cb"))
-                .withResultTitle("Imprisonment")
-                .withAmendmentType(AmendmentType.ADDED)
-                .build());
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "Imprisonment"));
     }
 
     @Test
@@ -379,53 +299,7 @@ public class HearingResultedIT {
         final List<Boolean> isGroupMember = asList(Boolean.TRUE, Boolean.TRUE, Boolean.FALSE);
         final List<Boolean> isGroupMaster = asList(Boolean.TRUE, Boolean.FALSE, null);
 
-        verifyPrivateEventsWithPoliceResultGenerated(Boolean.TRUE, groupId.toString(), isGroupMember, isGroupMaster);
-        verifyInPublicTopic();
-    }
-
-    @Test
-    public void testGeneratePoliceResultsForDefendantCC() throws JMSException {
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-        verifyPrivateEventsWithPoliceResultGenerated();
-        verifyInPublicTopic();
-
-        final JsonObject payload = createObjectBuilder()
-                .add(SESSION_ID, resultsMessage.getHearing().getId().toString())
-                .add(CASE_ID, CASE_ID_VALUE)
-                .add(DEFENDANT_ID, DEFENDANT_ID_VALUE)
-                .build();
-
-        sendGeneratePoliceResultsForADefendantCommand(payload);
-
-        verifyPrivateEventsForPoliceGenerateResultsForDefendant();
-        verifyInPublicTopic();
-    }
-
-    @Test
-    public void testGeneratePoliceResultsForDefendantCCWhenSpiOutFalse() throws JMSException {
-        stubSpiOutFlag(false, true);
-        final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
-        setOuCodeAndProsecutorAuthority(resultsMessage);
-
-        hearingResultsHaveBeenSharedV2(resultsMessage);
-        whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-        verifyPrivateEventsWithPoliceResultGenerated(false);
-        verifyNotInPublicTopic();
-
-        final JsonObject payload = createObjectBuilder()
-                .add(SESSION_ID, resultsMessage.getHearing().getId().toString())
-                .add(CASE_ID, CASE_ID_VALUE)
-                .add(DEFENDANT_ID, DEFENDANT_ID_VALUE)
-                .build();
-
-        sendGeneratePoliceResultsForADefendantCommand(payload);
-
-        verifyPrivateEventsForPoliceGenerateResultsForDefendant(true);
-        verifyInPublicTopic();
+        verifyPublicEventPoliceResultsGenerated(Boolean.TRUE, groupId.toString(), isGroupMember, isGroupMaster);
     }
 
     @Test
@@ -439,7 +313,6 @@ public class HearingResultedIT {
         //share results
         hearingResultsHaveBeenSharedV2(resultsMessage);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
-
 
         LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
@@ -457,7 +330,7 @@ public class HearingResultedIT {
         final BeanMatcher<HearingResultSummariesView> summaryCheck = isBean(HearingResultSummariesView.class)
                 .withValue(summs -> resultsFilter.apply(summs).size(),
                         (int) hearingIn.getProsecutionCases().stream().mapToLong(pc -> pc.getDefendants().size()).sum())
-                .with(summs -> resultsFilter.apply(summs),
+                .with(resultsFilter::apply,
                         hasItem(isBean(HearingResultSummaryView.class)
                                 .withValue(HearingResultSummaryView::getHearingId, hearingIn.getId())
                                 .withValue(HearingResultSummaryView::getHearingType, hearingIn.getType().getDescription())
@@ -465,7 +338,7 @@ public class HearingResultedIT {
                 );
 
         final LocalDate searchStartDate = startDate;
-        Queries.pollForMatch(15, 500, () -> getSummariesByDate(searchStartDate), summaryCheck);
+        pollForMatch(15, 500, () -> getSummariesByDate(searchStartDate), summaryCheck);
 
         final LocalDate earlierDate = hearingIn.getHearingDays().stream().map(hd -> hd.getSittingDay().toLocalDate()).min(Comparator.naturalOrder()).orElse(null).minusDays(1);
         final LocalDate laterDate = hearingIn.getHearingDays().stream().map(hd -> hd.getSittingDay().toLocalDate()).max(Comparator.naturalOrder()).orElse(null).plusDays(1);
@@ -500,7 +373,7 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void outOfOrderJourney() throws Exception {
+    public void outOfOrderJourney() {
         final PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
         setOuCodeAndProsecutorAuthority(resultsMessage);
         final Hearing hearingIn = resultsMessage.getHearing();
@@ -510,7 +383,6 @@ public class HearingResultedIT {
 
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
         hearingResultsHaveBeenSharedV2(resultsMessage);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
         LocalDate startDate = resultsMessage.getHearing().getHearingDays().get(0).getSittingDay().toLocalDate();
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
@@ -531,7 +403,7 @@ public class HearingResultedIT {
                         )
                 );
         final LocalDate searchStartDate = startDate;
-        Queries.pollForMatch(15, 500, () -> getSummariesByDate(searchStartDate), summaryCheck);
+        pollForMatch(15, 500, () -> getSummariesByDate(searchStartDate), summaryCheck);
 
         summaries = getSummariesByDate(startDate);
         assertThat(summaries, summaryCheck);
@@ -557,13 +429,12 @@ public class HearingResultedIT {
     public void testJourneyHearingToDisplayAllDetailsInResults() {
         PublicHearingResulted resultsMessage = basicShareResultsV2Template(MAGISTRATES);
         setOuCodeAndProsecutorAuthority(resultsMessage);
+
         final Hearing hearingIn = resultsMessage.getHearing();
-
-
         hearingResultsHaveBeenSharedV2(resultsMessage);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
         ApiCourtCentre expectedCourtCentre =
-                ApiCourtCentre.apiCourtCentre()
+                apiCourtCentre()
                         .withAddress(ApiAddress.apiAddress()
                                 .withAddress1(hearingIn.getCourtCentre().getAddress().getAddress1())
                                 .withAddress2(hearingIn.getCourtCentre().getAddress().getAddress2())
@@ -592,7 +463,7 @@ public class HearingResultedIT {
                 withJsonPath("$.hearing.courtCentre.address.postcode", equalTo(expectedCourtCentre.getAddress().getPostcode())),
                 withJsonPath("$.sharedTime", notNullValue())
         };
-        ResultsStepDefinitions.getHearingDetailsForHearingId(resultsMessage.getHearing().getId(), matcher1);
+        getHearingDetailsForHearingId(resultsMessage.getHearing().getId(), matcher1);
 
     }
 
@@ -601,7 +472,6 @@ public class HearingResultedIT {
         PublicHearingResulted resultsMessage = basicShareResultsV2TemplateWithHearingDay(MAGISTRATES, LocalDate.of(2018, 5, 2));
 
         final Hearing hearingIn = resultsMessage.getHearing();
-
         hearingResultsHaveBeenSharedV2(resultsMessage);
 
         resultsMessage = basicShareResultsV2TemplateWithHearingDay(MAGISTRATES, LocalDate.of(2018, 5, 3));
@@ -612,7 +482,7 @@ public class HearingResultedIT {
 
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
         ApiCourtCentre expectedCourtCentre =
-                ApiCourtCentre.apiCourtCentre()
+                apiCourtCentre()
                         .withAddress(ApiAddress.apiAddress()
                                 .withAddress1(hearingIn.getCourtCentre().getAddress().getAddress1())
                                 .withAddress2(hearingIn.getCourtCentre().getAddress().getAddress2())
@@ -642,7 +512,7 @@ public class HearingResultedIT {
                 withJsonPath("$.sharedTime", notNullValue()),
                 withJsonPath("$.hearing.hearingDays[3].sittingDay", is("2018-05-02T00:00:00.000Z"))
         };
-        ResultsStepDefinitions.getHearingDetailsForHearingIdAndHearingDate(resultsMessage.getHearing().getId(), LocalDate.of(2018, 5, 2), matcher1);
+        getHearingDetailsForHearingIdAndHearingDate(resultsMessage.getHearing().getId(), LocalDate.of(2018, 5, 2), matcher1);
     }
 
     @Test
@@ -654,7 +524,7 @@ public class HearingResultedIT {
         hearingResultsHaveBeenSharedV2(resultsMessage);
         whenPrisonAdminTriesToViewResultsForThePerson(getUserId());
         CourtCentre expectedCourtCentre =
-                CourtCentre.courtCentre()
+                courtCentre()
                         .withAddress(Address.address()
                                 .withAddress1(hearingIn.getCourtCentre().getAddress().getAddress1())
                                 .withAddress2(hearingIn.getCourtCentre().getAddress().getAddress2())
@@ -687,30 +557,23 @@ public class HearingResultedIT {
     }
 
     @Test
-    public void shouldGenerateAllTheRequiredEventsWhenResultsAreCreatedByIssuingTheCommandByAnAdmin() throws JMSException {
-        whenResultsAreCreatedBySystemAdmin();
-
-        verifyPrivateEventsWithPoliceResultGenerated();
-    }
-
-    @Test
     public void shouldBeSentToSpiOutForApplicationWithNoJudicialResultsV2() throws JMSException {
 
-        final PublicHearingResulted resultsMessage = PublicHearingResulted.publicHearingResulted()
+        final PublicHearingResulted resultsMessage = publicHearingResulted()
                 .setHearing(basicShareHearingTemplateWithApplication(randomUUID(), MAGISTRATES))
                 .setSharedTime(ZonedDateTime.now(ZoneId.of("UTC")));
         resultsMessage.setIsReshare(Optional.of(false));
         resultsMessage.setHearingDay(Optional.of(LocalDate.of(2018, 5, 2)));
 
-        final ProsecutionCase prosecutionCase = ProsecutionCase.prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0))
+        final ProsecutionCase prosecutionCase = prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0))
                 .withOriginatingOrganisation(null)
-                .withProsecutionCaseIdentifier(ProsecutionCaseIdentifier.prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
+                .withProsecutionCaseIdentifier(prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
                         .withProsecutionAuthorityCode(PROSECUTOR_WITH_SPI_OUT_FALSE).build())
                 .withOriginatingOrganisation(null)
                 .build();
         final CourtApplicationCase courtApplicationCase = courtApplicationCase().
                 withValuesFrom(resultsMessage.getHearing().getCourtApplications().get(0).getCourtApplicationCases().get(0))
-                .withProsecutionCaseIdentifier(ProsecutionCaseIdentifier.prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
+                .withProsecutionCaseIdentifier(prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
                         .withProsecutionAuthorityCode(PROSECUTOR_WITH_SPI_OUT_FALSE).build()).build();
 
         resultsMessage.getHearing().getProsecutionCases().set(0, prosecutionCase);
@@ -726,9 +589,8 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
 
         final JSONObject firstOffenceJson = new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(1);
         assertThat(firstOffenceJson.get("offenceSequenceNumber"), is(65));
@@ -740,9 +602,9 @@ public class HearingResultedIT {
     @Test
     public void shouldBeSentToSpiOutForApplicationWithJudicialResultsV2() throws JMSException {
 
-        final PublicHearingResulted resultsMessage = PublicHearingResulted.publicHearingResulted()
+        final PublicHearingResulted resultsMessage = publicHearingResulted()
                 .setHearing(basicShareHearingTemplateWithCustomApplication(randomUUID(), MAGISTRATES,
-                        asList(CourtApplication.courtApplication()
+                        asList(courtApplication()
                                 .withId(fromString("f8254db1-1683-483e-afb3-b87fde5a0a26"))
                                 .withApplicationReceivedDate(FUTURE_LOCAL_DATE.next())
                                 .withApplicationReference("OFFENCE_CODE_REFERENCE")
@@ -769,15 +631,15 @@ public class HearingResultedIT {
                                 .build())))
                 .setSharedTime(ZonedDateTime.now(ZoneId.of("UTC")));
 
-        final ProsecutionCase prosecutionCase = ProsecutionCase.prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0))
+        final ProsecutionCase prosecutionCase = prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0))
                 .withOriginatingOrganisation(null)
-                .withProsecutionCaseIdentifier(ProsecutionCaseIdentifier.prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
+                .withProsecutionCaseIdentifier(prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
                         .withProsecutionAuthorityCode(PROSECUTOR_WITH_SPI_OUT_FALSE).build())
                 .withOriginatingOrganisation(null)
                 .build();
         final CourtApplicationCase courtApplicationCase = courtApplicationCase().
                 withValuesFrom(resultsMessage.getHearing().getCourtApplications().get(0).getCourtApplicationCases().get(0))
-                .withProsecutionCaseIdentifier(ProsecutionCaseIdentifier.prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
+                .withProsecutionCaseIdentifier(prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(0).getProsecutionCaseIdentifier())
                         .withProsecutionAuthorityCode(PROSECUTOR_WITH_SPI_OUT_FALSE).build()).build();
 
         resultsMessage.getHearing().getProsecutionCases().set(0, prosecutionCase);
@@ -794,9 +656,8 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
         final JSONObject firstOffenceJson = new JSONObject(response.get()).getJSONObject("defendant").getJSONArray("offences").getJSONObject(1);
         assertThat(firstOffenceJson.get("offenceSequenceNumber"), is(0));
         assertThat(new JSONObject(response.get()).getJSONObject("defendant").get("prosecutorReference"), is("0800PP0100000000001H"));
@@ -820,12 +681,11 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
         JSONObject jsonObject = new JSONObject(response.get());
-        if(!jsonObject.getString("caseId").equalsIgnoreCase(caseId.toString())) {
-            response = verifyInPublicTopic();
+        if (!jsonObject.getString("caseId").equalsIgnoreCase(caseId.toString())) {
+            response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
             jsonObject = new JSONObject(response.get());
         }
         assertThat(jsonObject.getString("caseId"), is(caseId.toString()));
@@ -843,7 +703,7 @@ public class HearingResultedIT {
 
         stubGetProgressionProsecutionCases(caseId);
         stubGetProgressionCaseExistsByUrn(caseUrn, caseId);
-        stubSpiOutFlag(true, true, EMAIL);
+        stubSpiOutFlag(true, true, policeEmailAddress);
         setOuCodeAndProsecutorAuthority(resultsMessage);
 
         hearingResultsHaveBeenSharedV2(resultsMessage);
@@ -853,7 +713,7 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceNotificationRequestedV2(EMAIL);
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress));
     }
 
     @Test
@@ -866,7 +726,7 @@ public class HearingResultedIT {
 
         stubGetProgressionProsecutionCases(caseId);
         stubGetProgressionCaseExistsByUrn(caseUrn, caseId);
-        stubSpiOutFlag(true, true, EMAIL);
+        stubSpiOutFlag(true, true, policeEmailAddress);
         setOuCodeAndProsecutorAuthority(resultsMessage);
 
         hearingResultsHaveBeenSharedV2(resultsMessage);
@@ -876,13 +736,11 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceNotificationRequestedV2(EMAIL);
-        verifyEmailNotificationIsRaised(Arrays.asList("TestArmand TestKrajcik"));
-
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "TestArmand TestKrajcik"));
 
         final PublicHearingResulted resultsMessage1 = jsonObjectToObjectConverter.convert(getPayload(HEARING_RESULT_RESHARE_APPLICATION_ONLY_JURISDICTION_CROWN, hearingId), PublicHearingResulted.class);
         hearingResultsHaveBeenSharedV2(resultsMessage1);
-        verifyEmailNotificationIsRaised(Arrays.asList("TestArmand1 TestKrajcik1"));
+        verifyEmailNotificationIsRaised(List.of(policeEmailAddress, "TestArmand1 TestKrajcik1"));
     }
 
     @Test
@@ -902,9 +760,8 @@ public class HearingResultedIT {
         startDate = of(startDate.getYear(), startDate.getMonth(), startDate.getDayOfMonth() - 1);
 
         getSummariesByDate(startDate);
-        verifyPrivateEventsWithPoliceResultGenerated();
 
-        Optional<String> response = verifyInPublicTopic();
+        Optional<String> response = verifyPublicEventPoliceResultGeneratedAndReturnPayload();
         final JSONObject jsonObject = new JSONObject(response.get());
         assertThat(jsonObject.getString("caseId"), is(caseId.toString()));
     }
@@ -913,9 +770,9 @@ public class HearingResultedIT {
         if (null != resultsMessage.getHearing().getProsecutionCases() && !resultsMessage.getHearing().getProsecutionCases().isEmpty()) {
             int size = resultsMessage.getHearing().getProsecutionCases().size();
             for (int i = 0; i < size; i++) {
-                final ProsecutionCase prosecutionCase = ProsecutionCase.prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(i))
+                final ProsecutionCase prosecutionCase = prosecutionCase().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(i))
                         .withOriginatingOrganisation(OU_CODE)
-                        .withProsecutionCaseIdentifier(ProsecutionCaseIdentifier.prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(i).getProsecutionCaseIdentifier())
+                        .withProsecutionCaseIdentifier(prosecutionCaseIdentifier().withValuesFrom(resultsMessage.getHearing().getProsecutionCases().get(i).getProsecutionCaseIdentifier())
                                 .withProsecutionAuthorityCode(PROSECUTION_AUTHORITY)
                                 .withProsecutionAuthorityOUCode(OU_CODE).build())
                         .build();
@@ -926,11 +783,11 @@ public class HearingResultedIT {
         }
     }
 
-    private static JsonObject getPayload(final String path, final UUID hearingId) {
+    private JsonObject getPayload(final String path, final UUID hearingId) {
         return getPayload(path, hearingId, null);
     }
 
-    private static JsonObject getPayload(final String path, final UUID hearingId, final UUID groupId) {
+    private JsonObject getPayload(final String path, final UUID hearingId, final UUID groupId) {
         String request = null;
         try {
             final InputStream inputStream = HearingResultedIT.class.getClassLoader().getResourceAsStream(path);
@@ -946,7 +803,7 @@ public class HearingResultedIT {
         return reader.readObject();
     }
 
-    private static JsonObject getPayload(final String path, final UUID hearingId, final UUID caseId, final UUID groupId) {
+    private JsonObject getPayload(final String path, final UUID hearingId, final UUID caseId, final UUID groupId) {
         String request = null;
         try {
             final InputStream inputStream = HearingResultedIT.class.getClassLoader().getResourceAsStream(path);
